* fix bug overflow drop-down-menu

--- a/static/content/site.css
+++ b/static/content/site.css
@@ -1266,11 +1266,43 @@ select:focus {
     animation-name: zoomIn;
 }
 
+
 .animated_zoomIn {
     -webkit-animation-duration: 0.5s;
     animation-duration: 0.5s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
+}
+
+.zoomIn_card {
+    -webkit-animation-name: zoomIn_card;
+    animation-name: zoomIn_card;
+    animation-duration: 0.5s;
+}
+
+@-webkit-keyframes zoomIn_card {
+    from {
+        opacity: 0;
+        transform: scale(0.3);
+
+    }
+
+    50% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+@keyframes zoomIn_card {
+    from {
+        opacity: 0;
+        transform: scale(0.3);
+    }
+
+    50% {
+        transform: scale(1);
+        opacity: 1;
+    }
 }
 
 
@@ -1867,6 +1899,8 @@ div.card-group{
     /*z-index: 2000 !important;*/
     /*display:block;*/
     /*margin-right: 160%;*/
+    /*z-index: 20000 !important;*/
+    /*transform: translate3d(0,0,10px) !important;*/
     border: 1px solid #F2F2F2;
     box-sizing: border-box;
     box-shadow: 0px 4px 8px rgba(99, 99, 99, 0.2);
